@@ -63,6 +63,7 @@ Revision:
 * #256: extracted language string from register.php in imProfile | ticket from addons (Phoenyx)
 * #695: fixed backward compatibility bug with xoops_getbanner() (Phoenyx)
 * #696: fixed parse error in icmsstopspammer.php (Phoenyx)
+* #643: content can now be edited again (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
